--- a/client/views/item.html
+++ b/client/views/item.html
@@ -64,7 +64,7 @@
               id="detailsAddPost"
               name="detailsAddPost"
               autocomplete="detailsAddPost"
-              placeholder="descriere"
+              placeholder="Descriere"
             ></textarea>
             <h4>Adauga oferta</h4>
             <div id="allAddPostItems">
@@ -134,7 +134,7 @@
               name="loginUsername"
               autocomplete="loginName"
               required
-              placeholder="username"
+              placeholder="Nume utilizator"
               minlength="2"
             />
             <input
@@ -142,15 +142,15 @@
               type="password"
               name="loginPassword"
               id="loginPassword"
-              placeholder="password"
+              placeholder="Parola"
               minlength="2"
               required
               autocomplete="login-password"
             />
             <div id="errorsLogin"></div>
             <div class="info-auth">
-              <span>Don't have an account?</span>
-              <a href="#" id="openRegisterModal"> Register here</a>
+              <span>Nu ai cont?</span>
+              <a href="#" id="openRegisterModal"> Inregistrare</a>
             </div>
 
             <button class="btn green" type="submit">Login</button>
@@ -164,13 +164,13 @@
         <span class="close" id="closeRegister">&times;</span>
         <div class="registerModal">
           <form name="register-form" class="register-form">
-            <h2>Register</h2>
+            <h2>Inregistrare</h2>
             <input
               class="mb-15"
               type="text"
               name="nameRegister"
               autocomplete="nameRegister"
-              placeholder="Full Name"
+              placeholder="Nume complet"
               required
             />
             <input
@@ -178,7 +178,7 @@
               type="text"
               name="usernameRegister"
               autocomplete="username"
-              placeholder="Username"
+              placeholder="Nume utilizator"
               required
             />
             <input
@@ -186,7 +186,7 @@
               type="password"
               name="passwordRegister"
               autocomplete="passwordRegister"
-              placeholder="Password"
+              placeholder="Parola"
               required
             />
             <input
@@ -194,16 +194,16 @@
               type="password"
               name="confirmPasswordRegister"
               autocomplete="confirmPasswordRegister"
-              placeholder="Confirm Password"
+              placeholder="Confirma parola"
               required
             />
             <div id="errorsRegister"></div>
             <div class="info-auth">
-              <span>Already have an account?</span>
-              <a href="#" id="account"> Login here</a>
+              <span>Ai deja un cont?</span>
+              <a href="#" id="account"> Login aici</a>
             </div>
 
-            <button class="btn green" type="submit">Register</button>
+            <button class="btn green" type="submit">Inregistrare</button>
           </form>
         </div>
       </div>
@@ -225,7 +225,7 @@
                     data-type="offer"
                     name="title"
                     autocomplete="title"
-                    placeholder="Titlu*"
+                    placeholder="Titlu"
                     required
                   />
                   <input
@@ -234,7 +234,7 @@
                     data-type="offer"
                     name="urlLink"
                     autocomplete="urlLink"
-                    placeholder="Link to site"
+                    placeholder="Link la site"
                     required
                   />
                 </div>
@@ -244,21 +244,21 @@
                     type="number"
                     name="price"
                     autocomplete="price"
-                    placeholder="Pret*"
+                    placeholder="Pret"
                     required
                   />
                   <select name="currency" class="mb-15 mr-10" required>
-                    <option value="">Select Currency*</option>
+                    <option value="">Selecteaza valuta</option>
                     <option value="RON">RON</option>
                     <option value="EURO">EURO</option>
-                    <option value="$">$</option>
+                    <option value="$">Dolar</option>
                   </select>
                 </div>
                 <textarea
                   name="description"
                   class="mb-15 mr-10"
                   autocomplete="description"
-                  placeholder="Descriere Oferta*"
+                  placeholder="Descriere Oferta"
                 ></textarea>
                 <hr />
                 <div class="flex">
@@ -267,7 +267,7 @@
                     type="text"
                     name="image-offer"
                     autocomplete="image"
-                    placeholder="Image*"
+                    placeholder="Image link"
                     required
                   />
                   <input
@@ -275,14 +275,14 @@
                     type="text"
                     name="image-offer"
                     autocomplete="image"
-                    placeholder="Image"
+                    placeholder="Image link"
                   />
                   <input
                     class="mb-15 mr-10"
                     type="text"
                     name="image-offer"
                     autocomplete="image"
-                    placeholder="Image"
+                    placeholder="Image link"
                   />
                 </div>
                 <div class="flex">
@@ -291,21 +291,21 @@
                     type="text"
                     name="image-offer"
                     autocomplete="image"
-                    placeholder="Image"
+                    placeholder="Image link"
                   />
                   <input
                     class="mb-15 mr-10"
                     type="text"
                     name="image-offer"
                     autocomplete="image"
-                    placeholder="Image"
+                    placeholder="Image link"
                   />
                   <input
                     class="mb-15 mr-10"
                     type="text"
                     name="image-offer"
                     autocomplete="image"
-                    placeholder="Image"
+                    placeholder="Image link"
                   />
                 </div>
               </div>
@@ -340,13 +340,13 @@
 
             <li id="accountLi">
               <a title="Account" href="#" id="openLoginModal"
-                ><i class="far fa-user"></i> Account</a
+                ><i class="far fa-user"></i> Cont</a
               >
             </li>
             <li id="accountLiWithUsername" style="display: none">
               <a title="Account" href="#">
                 <i class="far fa-user"></i>
-                Welcome,
+                Bine ai venit,
               </a>
             </li>
             <li id="logoutLi" style="display: none">
@@ -381,7 +381,7 @@
     <div class="wrapper row5">
       <div id="copyright" class="clear">
         <p class="fl_left">
-          Copyright &copy; 2018 - All Rights Reserved -
+          Copyright &copy; 2021 - All Rights Reserved -
           <a href="#">PuAc Team</a>
         </p>
         <p class="fl_right">
