--- a/client/views/items.html
+++ b/client/views/items.html
@@ -117,7 +117,7 @@
       <header id="header">
         <div id="logo" class="fl_left">
           <div class="container-logo">
-            <img  src="https://www.vhv.rs/dpng/d/588-5886888_farmers-market-market-stall-png-icon-transparent-png.png" alt="">
+            <img  src="https://www.vhv.rs/dpng/d/29-295866_vector-abstract-background-png-transparent-png.png" alt="">
             <h1><a href="../index.html"> PuAc</a></h1>
           </div>
         </div>
@@ -136,12 +136,12 @@
             </li>
 
             <li id="accountLi">
-              <a title="Account" href="#" id="openLoginModal"
+              <a title="Cont" href="#" id="openLoginModal"
                 ><i class="far fa-user"></i> Cont</a
               >
             </li>
             <li id="accountLiWithUsername" style="display: none">
-              <a title="Account" href="#">
+              <a title="Cont" href="#">
                 <i class="far fa-user"></i>
                 Bine ai venit,
               </a>
